# GeneralsGameCode-macOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  GRAPHICS_IMPROVEMENTS_PLAN.md  MACOS_ENV_VARS.md  MACOS_PORT_PLAN.md  README.md  README_MACOS.md  vcpkg.json
.github/workflows/: macos-release.yml
Core/: .gitignore
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/Common/: FramePacer.h  GameAudio.h  GameCommon.h
Core/GameEngine/Include/Common/ExternalControl/: ExternalControlInterface.h
Core/GameEngine/Include/GameClient/: GadgetTextEntry.h  GameWindow.h
Core/GameEngine/Include/GameLogic/: Damage.h
Core/GameEngine/Include/GameNetwork/: GameInfo.h  LANAPI.h  udp.h
Core/GameEngine/Source/Common/: CRCDebug.cpp  FramePacer.cpp  UserPreferences.cpp
Core/GameEngine/Source/Common/ExternalControl/: ExternalControlSystem.cpp
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/Common/System/: Debug.cpp  FileSystem.cpp  GameMemory.cpp  GameMemoryInit.cpp  LocalFile.cpp  XferCRC.cpp  XferLoad.cpp  XferSave.cpp
Core/GameEngine/Source/GameClient/: Display.cpp  GameText.cpp  LanguageFilter.cpp  MapUtil.cpp
Core/GameEngine/Source/GameClient/GUI/: IMEManager.cpp
Core/GameEngine/Source/GameLogic/System/: GameLogicDispatch.cpp
Core/GameEngine/Source/GameNetwork/: GameInfo.cpp  IPEnumeration.cpp  LANAPI.cpp  Transport.cpp  udp.cpp
Core/GameEngine/Source/GameNetwork/GameSpy/: LobbyUtils.cpp  MainMenuUtils.cpp  StagingRoomGameInfo.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Include/MilesAudioDevice/: MilesAudioManager.h
Core/GameEngineDevice/Include/Win32Device/GameClient/: CocoaKeyboard.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/StdDevice/Common/: StdLocalFileSystem.cpp
Core/GameEngineDevice/Source/VideoDevice/FFmpeg/: FFmpegFile.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: BaseHeightMap.cpp  HeightMap.cpp  W3DPropBuffer.cpp  W3DShaderManager.cpp  W3DSmudge.cpp  W3DTreeBuffer.cpp  W3DView.cpp  WorldHeightMap.cpp
Core/GameEngineDevice/Source/Win32Device/Common/: Win32BIGFileSystem.cpp  Win32LocalFileSystem.cpp
Core/GameEngineDevice/Source/Win32Device/GameClient/: CocoaKeyboard.cpp
Core/Libraries/Source/EABrowserDispatch/: BrowserDispatch.h  CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: dx8caps.cpp  dx8fvf.cpp  dx8webbrowser.cpp  dx8wrapper.cpp  missingtexture.cpp  render2dsentence.cpp  surfaceclass.cpp  texturethumbnail.cpp  texturethumbnail.h
Core/Libraries/Source/WWVegas/WWAudio/: AudibleSound.h  SoundBuffer.h  Utils.h
Core/Libraries/Source/debug/: debug_debug.cpp  debug_debug.h  debug_except.cpp  debug_stack.cpp
Core/Libraries/Source/profile/: profile.h  profile_funclevel.cpp  profile_funclevel.h
Dependencies/Utility/Utility/: compat.h  endian_compat.h  string_compat.h  thread_compat.h  time_compat.h  wchar_compat.h
Dependencies/Utility/osdep_compat/: apple_path_shim.h  atlbase.h  atlcom.h  comutil.h  crtdbg.h  dbt.h  ddraw.h  dinput.h  direct.h  dsound.h  eh.h  excpt.h  imagehlp.h  imm.h  io.h  lmcons.h  malloc.h  mbstring.h  mmsystem.h  new.h  objbase.h  ocidl.h  ole2.h  oleauto.h  osdep.h  process.h  shellapi.h  shlguid.h  shlobj.h  snmp.h  tchar.h  vfw.h  win32_api.h  windows.h  windowsx.h  winerror.h  wininet.h  winreg.h  winsock.h
Dependencies/Utility/osdep_compat/osdep/: osdep.h
Generals/Code/Main/: WinMain.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  WinMain.cpp
cmake/: FindFFMPEG.cmake  apple.cmake  config-build.cmake  config-debug.cmake  dx8.cmake  external_control.cmake  gamespy.cmake  miles.cmake
cmake/dx8_stub/: apple_ani_cursor.h  apple_ani_cursor.mm  dx8_device.cpp  dx8_stub.cpp  gdi_text.mm  metal_backend.h  metal_backend.mm  metal_smoketest.cpp  registry_stub.cpp
cmake/miles_apple/: CMakeLists.txt  cleanup.c  miles_apple.mm
cmake/miles_apple/mss/: mss.h
cmake/toolchains/: apple-arm64.cmake
docs/: EXTERNAL_CONTROL_API.md  GUARD_FROM_POSITION.md
extensions/: README.md  manifest.json
extensions/vehicle-dual-guard/: README.md
game_agent/: Makefile  README.md  run_agent.py
game_agent/agent/: __init__.py  base.py  brief.py  journal.py  knowledge.py  ollama_agent.py  ollama_client.py  orchestrator.py  scripted.py  strategy.py  tasks.py
game_agent/agent/commander/: __init__.py  commander.py
game_agent/agent/cwc/: __init__.py  combat_eval.py  intel.py  knowledge_base.py  missions.py  opening.py  sectors.py  squads.py  terrain.py  uistate.py
game_agent/agent/skills/: __init__.py  base.py  library.py  registry.py
game_agent/agent/strategist/: airdefense.py  army.py  influence.py  macro.py  personality.py  playbook.py  stance.py  strategist.py
game_agent/cwc_data/: extract_cwc.py  playbook.json
game_agent/cwc_data/tables/: abilities.json  armor_matrix.json  effectiveness.json  meta.json  roles.json  tech_tree.json  units.json  weapons.json
game_agent/docs/: AGENT.md  ARCHITECTURE.md  COMMANDER_PLAN.md  HARNESS.md
game_agent/genapi/: __init__.py  client.py  threats.py  world.py  ws.py
game_agent/tools/: demo.py  events_listen.py  map_view.py  session.py  smoke_control.py  smoke_read.py  threats_watch.py  trajectory.py
game_agent/ui/: map_live.html  server.py
launcher/: Info.plist  Package.swift  README.md  build-app.sh  make-dmg.sh
launcher/Sources/GeneralsZHLauncher/: ApiDocsTab.swift  App.swift  BotControlTab.swift  Config.swift  ContentView.swift  Downloader.swift  Extensions.swift  ExtensionsTab.swift  GameInstaller.swift  GitHubClient.swift  MarkdownDoc.swift  MarkdownView.swift  OptionsIni.swift  PlayTab.swift  Resolution.swift  RootView.swift  SemVer.swift  UserData.swift
macos_port_tests/: README.md  fileio_check.cpp  random_check.cpp  run_fileio.sh  run_random.sh  run_sizeof.sh  run_tick.sh  sizeof_check.cpp  tick_check.cpp
mods/cwc-guard-from-position/: README.md  install.sh
scripts/: big_extract.py  cwc_guard_patch.py  package-macos-release.sh
scripts/parked_patches/: README.md  metal_backend_explicit_vsync.patch
triplets/: arm64-osx.cmake
(+135 files in other folders)
